Allow custom method calls, fixes #4770